--- a/notes-app/package.json
+++ b/notes-app/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1", 
+    "client": "cd client && npm start", 
+    "dev": "concurrently --kill-others-on-fail \"npm run start\" \"npm run client\"",
+    "db:init": "dropdb --if-exists notes_db && createdb notes_db",
+    "db:reset": "node ./scripts/resetDb.js", 
+    "db:seed": "node ./scripts/seedDb.js",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
